src/test/wacc/invalid/syntaxErr/pairs/fstNull.wacc
# call fst on a null pair literal

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  int i = fst null;
  println i
end
